--- a/Hawk.ETL.Controls/TaskManagerView.xaml
+++ b/Hawk.ETL.Controls/TaskManagerView.xaml
@@ -22,7 +22,7 @@
     		<RowDefinition Height="0.858*"/>
     		<RowDefinition Height="18"/>
     	</Grid.RowDefinitions>
-    	<ListView   ItemsSource="{Binding CurrentProcessTasks}">
+    	<ListView   ItemsSource="{Binding CurrentProcessTasks}" Margin="20,8">
     	
     		<ListView.View>
     			<GridView>
@@ -58,7 +58,7 @@
     			</GridView>
     		</ListView.View> 	           	 
     	</ListView>
-    	<StackPanel VerticalAlignment="Top"   DataContext="{Binding BindingCommands.ChildActions[2].ChildActions}"  HorizontalAlignment="Left" Orientation="Horizontal" Grid.Row="1">
+    	<StackPanel VerticalAlignment="Top"   DataContext="{Binding BindingCommands.ChildActions[2].ChildActions}"  HorizontalAlignment="Left" Orientation="Horizontal" Grid.Row="1" Margin="20,0,0,0">
     		<Button Style="{DynamicResource miniButton}" DataContext="{Binding [0]}" />
     		<Button Style="{DynamicResource miniButton}" DataContext="{Binding [1]}" />
     		<Button Style="{DynamicResource miniButton}" DataContext="{Binding [2]}" />
