--- a/Hawk.Core/Themes/Theme.xaml
+++ b/Hawk.Core/Themes/Theme.xaml
@@ -840,7 +840,103 @@
         <Setter Property="Command" Value="{Binding}"/>
         <Setter Property="Margin" Value="10,0,0,0"/>
     </Style>
-	 <Style x:Key="miniButton"
+
+    <Style x:Key="middleButton2"
+           TargetType="{x:Type Button}">
+
+        <Setter Property="Background"
+                Value="Transparent" />
+        <Setter Property="BorderThickness"
+                Value="2" />
+        <Setter Property="HorizontalContentAlignment"
+                Value="Center" />
+        <Setter Property="VerticalContentAlignment"
+                Value="Center" ></Setter>
+        <Setter Property="AllowDrop"
+                Value="True" />
+        <Setter Property="Padding"
+                Value="1" />
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type Button}">
+                    <Grid Width="{TemplateBinding Width}" Height="{TemplateBinding Height}" Margin="0">
+                        <Ellipse Fill="{TemplateBinding Background}"
+                			Margin="1"
+                			StrokeThickness="0" />
+                        <Ellipse x:Name="ellipsebg"
+                		
+                			Opacity="0"
+                			Margin="1"
+                			StrokeThickness="0" />
+                        <Ellipse x:Name="ellipse"
+                				Margin="1"
+                			Stroke="{TemplateBinding Foreground}"
+                			StrokeThickness="{Binding BorderThickness.Left, RelativeSource={x:Static RelativeSource.TemplatedParent}}" />
+                        <Viewbox Margin="5">
+                            <ContentPresenter Content="{TemplateBinding Content}"></ContentPresenter> 
+                        </Viewbox>
+                    </Grid>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsPressed"
+                                 Value="True">
+                            <Trigger.EnterActions>
+                                <BeginStoryboard>
+                                    <Storyboard>
+                                        <DoubleAnimation Storyboard.TargetName="ellipsebg"
+                                                         Storyboard.TargetProperty="Opacity"
+                                                         From="0"
+                                                         To="0.3"
+                                                         Duration="0:0:0" />
+                                    </Storyboard>
+                                </BeginStoryboard>
+                            </Trigger.EnterActions>
+                            <!-- some out fading -->
+                            <Trigger.ExitActions>
+                                <BeginStoryboard>
+                                    <Storyboard>
+                                        <DoubleAnimation Storyboard.TargetName="ellipsebg"
+                                                         Storyboard.TargetProperty="Opacity"
+                                                         To="0"
+                                                         Duration="0:0:0.5" />
+                                    </Storyboard>
+                                </BeginStoryboard>
+                            </Trigger.ExitActions>
+                        </Trigger>
+                        <Trigger Property="IsMouseOver"
+                                 Value="True">
+                            <Setter TargetName="ellipse"
+                                    Property="Opacity"
+                                    Value="1" />
+                        </Trigger>
+                        <Trigger Property="IsMouseOver"
+                                 Value="False">
+                            <Setter TargetName="ellipse"
+                                    Property="Opacity"
+                                    Value=".5" />
+                        </Trigger>
+                        <Trigger Property="IsEnabled"
+                                 Value="false">
+                            <Setter Property="Foreground"
+                                    Value="#ADADAD" />
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+        <Setter Property="mvvm:DropHelper.DropSupport" >
+            <Setter.Value>
+                <mvvm:DropSupportData BindingPath=""/>
+            </Setter.Value>
+        </Setter>
+        <Setter Property="Height" Value="20"/>
+        <Setter Property="Width" Value="20"/>
+
+        <Setter Property="ToolTip" Value="{Binding Text}"/>
+        <Setter Property="Command" Value="{Binding}"/>
+        <Setter Property="Margin" Value="10,0,0,0"/>
+    </Style>
+    
+    <Style x:Key="miniButton"
            TargetType="{x:Type Button}">
 
         <Setter Property="Background"
