--- a/Hawk.ETL.Controls/SmartCrawlerUI.xaml
+++ b/Hawk.ETL.Controls/SmartCrawlerUI.xaml
@@ -24,11 +24,12 @@
         		<ColumnDefinition Width="0.5*"/>
         	</Grid.ColumnDefinitions>
         	<ScrollViewer>
-        		<TextBlock Text="{Binding URLHTML}"    ScrollViewer.CanContentScroll="True" TextWrapping="WrapWithOverflow" Margin="20" />
+        		<TextBox Text="{Binding URLHTML}"    ScrollViewer.CanContentScroll="True" TextWrapping="WrapWithOverflow" Margin="20" />
         	</ScrollViewer>
             <WindowsFormsHost  Name="windowsFormsHost"   Grid.Column="1" Margin="20" >
                 
             </WindowsFormsHost>
+            <GridSplitter Width="3.375" Margin="-1.625,0,0,0" Grid.Column="1" HorizontalAlignment="Left"/>
 
 
         </Grid>
