--- a/Hawk/MainWindow.xaml
+++ b/Hawk/MainWindow.xaml
@@ -55,9 +55,11 @@
                         </Avalondock:LayoutAnchorablePane>
                     </Avalondock:LayoutPanel>
                     <Avalondock:LayoutPanel Orientation="Vertical" DockWidth="1*" >
-                        <Avalondock:LayoutAnchorablePane DockHeight="6*" x:Name="dockablePane1">
+                        <Avalondock:LayoutAnchorablePane DockHeight="4*" x:Name="dockablePane1">
                             <Avalondock:LayoutAnchorable/>
+                            
                         </Avalondock:LayoutAnchorablePane>
+                        <Avalondock:LayoutAnchorablePane DockHeight="2*" x:Name="dockablePane3"/>
                         <Avalondock:LayoutAnchorablePane DockHeight="4*" x:Name="dockablePane2"/>
                     </Avalondock:LayoutPanel>
 
